@@ -1,3 +1,6 @@
+o Jul 21, 2008 - chris
+o Fixed potential buffer overflow (thanks, Tielei Wang)
+
 o Jul 19, 2008 - chris
 o The C++ wrapper now supports Transactions (see ham::db::begin(),
     ham::txn::abort(), ham::txn:commit())
